<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btIdBTFreeMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPtBTFreeMode"/>

    <Button
        android:id="@+id/btIdBTMemoryPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btIdBTFreeMode"
        android:text="@string/btPtBTMemoryPath" />
    
    <Button
        android:id="@+id/btIdBTRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btIdBTMemoryPath"
        android:text="@string/btPtBTRandom" />
    
</RelativeLayout>
